made product filtering functional some css fixes on productList and Filtering needs some responsivity fixes on mobile

--- a/stylePL.css
+++ b/stylePL.css
@@ -1,3 +1,7 @@
+header{
+    position: relative;
+
+}
 .headerContainer,.logoAndCatalog{
 	display: flex;
 	flex-direction: row;
@@ -68,7 +72,8 @@
 	align-content: space-evenly;
 }
 .rubrika{
-    margin: 30px;
+    margin-right: 20px;
+    margin-bottom: 20px;
     margin-left: 57px;
     
 }
@@ -168,12 +173,25 @@ button{
     -webkit-transition: all 0.5s;
 }
 main{
-    margin-top: 100px;
+    margin-top: 30px;
 }
 #options p{
     margin-left: 5%;
     color: white;
     margin-top: 2%;
+}
+#myButton{
+    margin-top: 2%;
+    margin-left: 5%;
+    background-color: #f29339;
+    outline: 0;
+    border-radius: 5px;
+    font-family: Inter,-apple-system,system-ui,Roboto,"Helvetica Neue",Arial,sans-serif;
+    border: 0; 
+    width: 30%;
+
+
+
 }
 #filterimg{
     max-height: 25px;
@@ -252,7 +270,7 @@ input[type=number] {
         transition: 0.2s;
     }
     #options{
-        margin-top: 10%;
+        /* margin-top: 10%; */
         width: 20%;
     }
     #options p {
@@ -266,6 +284,9 @@ input[type=number] {
     #options input::placeholder{
         color: white;
         font-size: medium;
+    }
+    header{
+        max-height: 5px;
     }
     
 
@@ -288,7 +309,7 @@ input[type=number] {
         transition: 0.2s;
     }
     #options{
-        margin-top: 20%;
+        /* margin-top: 20%; */
         width: 25%;
     }
     #options p {
@@ -317,7 +338,7 @@ input[type=number] {
     }
     
     #options{
-        margin-top: 20%;
+        /* margin-top: 20%; */
         width: 30%;
     }
     #options p {
